<resources>
    <string name="app_name">WMC</string>
    <string name="title_home">홈</string>
    <string name="title_list">카페 목록</string>
    <string name="title_review">리뷰 작성</string>
    <string name="title_myPage">마이페이지</string>
    <string name="cafe_detail">카페 디테일</string>
    <string name="cafe_delete">카페 삭제</string>
    <string name="cafe_detail_more">카페 리뷰 더보기</string>
    <string name="cafe_modify">카페 수정</string>
    <string name="cafe_registration">카페 추가</string>
    <string name="cafe_list">카페 리스트</string>
    <string name="list_search">카페 검색</string>
    <string name="myPage_grade">회원 등급</string>
    <string name="mypage_review">마이페이지 리뷰 수정</string>
    <string name="mypage_review_comment">마이페이지 리뷰 수정 코멘터리</string>
    <string name="mypage_review_tag">마이페이지 리뷰 태그</string>
    <string name="review_comment">리뷰 코멘터리 작성</string>
    <string name="review_tag">리뷰 태그</string>
    <string name="review_search">리뷰 검색</string>
    <string name="review_cafe_list">리뷰 검색 시 카페 목록</string>
    <string name="cafe_registration_tag">카페등록의 태그추가</string>
    <string name="bottom_review">하단바 리뷰 작성</string>
    <string name="bottom_review_comment">하단바 리뷰 코멘터리</string>
    <string name="bottom_review_tag">하단바 리뷰 태그</string>
    <string name="bottom_review_cafe_list">하단바 리뷰 검색 시 카페 목록</string>
    <string name="url">http://3.90.202.187:8080/</string>
    <string name="default_Review_Cafeimage">https://w.namu.la/s/0c6301df01fc4f180ec65717bad3d0254258abf0be33299e55df7c261040f517518eb9008a1a2cd3d7b8b7777d70182c185bc891b1054dc57b11cc46fd29130a3474f1b75b816024dfdc16b692a0c77c</string>
    <string name="default_Profileimage">https://w.namu.la/s/0c6301df01fc4f180ec65717bad3d0254258abf0be33299e55df7c261040f517518eb9008a1a2cd3d7b8b7777d70182c185bc891b1054dc57b11cc46fd29130a3474f1b75b816024dfdc16b692a0c77c</string>
</resources>