<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.wmc.ui.Fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/home_to_list"
            app:destination="@id/navigation_list" />
        <action
            android:id="@+id/home_to_review"
            app:destination="@id/navigation_review" />
        <action
            android:id="@+id/home_to_cafe_detail"
            app:destination="@id/navigation_cafe_detail" />
        <action
            android:id="@+id/home_to_mypage"
            app:destination="@id/navigation_mypage" />
    </fragment>

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.wmc.ui.Fragment.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/list_to_list_search"
            app:destination="@id/navigation_list_search" />
        <action
            android:id="@+id/list_to_cafe_registration"
            app:destination="@id/navigation_cafe_registration" />
    </fragment>

    <fragment
        android:id="@+id/navigation_review"
        android:name="com.example.wmc.ui.Fragment.ReviewFragment"
        android:label="@string/title_review"
        tools:layout="@layout/fragment_review" />

    <fragment
        android:id="@+id/navigation_mypage"
        android:name="com.example.wmc.ui.Fragment.MyPageFragment"
        android:label="@string/title_myPage"
        tools:layout="@layout/fragment_mypage" />

    <fragment
        android:id="@+id/navigation_cafe_detail"
        android:name="com.example.wmc.ui.Fragment.CafeDetailFragment"
        android:label="@string/cafe_detail"
        tools:layout="@layout/fragment_cafe_detail" >
        <action
            android:id="@+id/cafe_detail_to_cafe_detail_more"
            app:destination="@id/navigation_cafe_detail_more" />
        <action
            android:id="@+id/cafe_detail_to_cafe_modify"
            app:destination="@id/navigation_cafe_modify" />
        <action
            android:id="@+id/cafe_detail_to_review"
            app:destination="@id/navigation_review" />
    </fragment>

    <fragment
        android:id="@+id/navigation_list_search"
        android:name="com.example.wmc.ui.Fragment.ListSearchFragment"
        android:label="@string/list_search"
        tools:layout="@layout/fragment_list_search" />

    <fragment
        android:id="@+id/navigation_cafe_registration"
        android:name="com.example.wmc.ui.Fragment.CafeRegistrationFragment"
        android:label="@string/cafe_registration"
        tools:layout="@layout/fragment_cafe_registration" />

    <fragment
        android:id="@+id/navigation_cafe_detail_more"
        android:name="com.example.wmc.ui.Fragment.CafeDetailMoreFragment"
        android:label="@string/cafe_detail_more"
        tools:layout="@layout/fragment_cafe_detail_more" />

    <fragment
        android:id="@+id/navigation_cafe_modify"
        android:name="com.example.wmc.ui.Fragment.CafeModifyFragment"
        android:label="@string/cafe_modify"
        tools:layout="@layout/fragment_cafe_modify" />

</navigation>